Disable runtime feature CompositeOpaqueFixedPosition

The feature caused performance regression on low dpi devices when a
fix positioned element contains too many children.

Temporarily disble it to unblock Stable release. Will address it through
https://crbug.com/816937.

Bug: 814673
Change-Id: I6f0fea7d6b61f572b4d8da4e54c34d63cc5bc2f1
Reviewed-on: https://chromium-review.googlesource.com/939585
Commit-Queue: Yi Gu <yigu@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539552}
Former-commit-id: 69246b8974a267061fe1c1beab52bbcb17b474a7